--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="title-small">
-                            <p class="text-dark mb-2"><span class="base-color">Blog</span></p>
+                            <p class="text-dark mb-2"><span class="base-color">Portfolio</span></p>
                         </div>
                         <div class="col-lg-12">
                             <div class="text-left">
@@ -996,7 +996,26 @@
                                                         </div>
                                                     </div>
                                                 </div>
-
+                                                <div class="col-lg-4 portfolio-item my-3 int">
+                                                        <div class="portfolio-item-content rounded">
+                                                            <img src="assets\img\int4.JPG" alt="/">
+                                                            <div class="img-overlay text-center">
+                                                                <div class="img-overlay-content">
+                                                                    <div class="portfolio-icon">
+                                                                        <button type="button" data-toggle="modal" data-target="#portfolio-single">
+                                                                            <!-- <i class="lni-link"></i> -->
+                                                                        </button>
+                                                                        <!--  <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                                                                                                                                            <i class="lni-search"></i>
+                                                                                                                                                        </a> -->
+                                                                    </div>
+                                                                    <h5 class="text-white mt-3 mb-0"></h5>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+    
+    
 
                                                 <div class="col-lg-4 portfolio-item my-3 field">
                                                         <div class="portfolio-item-content rounded">
@@ -1163,6 +1182,60 @@
                                                                                             </div>
                                                                                         </div>
                                                                                     </div>   
+                                                                                    <div class="col-lg-4 portfolio-item my-3 diss">
+                                                                                            <div class="portfolio-item-content rounded">
+                                                                                                <img src="assets\img\diss2.JPG" alt="/">
+                                                                                                <div class="img-overlay text-center">
+                                                                                                    <div class="img-overlay-content">
+                                                                                                        <div class="portfolio-icon">
+                                                                                                            <button type="button" data-toggle="modal" data-target="#portfolio-single">
+                                                                                                                <!-- <i class="lni-link"></i> -->
+                                                                                                            </button>
+                                                                                                            <!--  <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                                                                                                                                                                                <i class="lni-search"></i>
+                                                                                                                                                                                            </a> -->
+                                                                                                        </div>
+                                                                                                        <h5 class="text-white mt-3 mb-0"></h5>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                            </div>
+                                                                                        </div> 
+                                                                                        <div class="col-lg-4 portfolio-item my-3 diss">
+                                                                                                <div class="portfolio-item-content rounded">
+                                                                                                    <img src="assets\img\diss3.JPG" alt="/">
+                                                                                                    <div class="img-overlay text-center">
+                                                                                                        <div class="img-overlay-content">
+                                                                                                            <div class="portfolio-icon">
+                                                                                                                <button type="button" data-toggle="modal" data-target="#portfolio-single">
+                                                                                                                    <!-- <i class="lni-link"></i> -->
+                                                                                                                </button>
+                                                                                                                <!--  <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                                                                                                                                                                                    <i class="lni-search"></i>
+                                                                                                                                                                                                </a> -->
+                                                                                                            </div>
+                                                                                                            <h5 class="text-white mt-3 mb-0"></h5>
+                                                                                                        </div>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                            </div> 
+                                                                                            <div class="col-lg-4 portfolio-item my-3 diss">
+                                                                                                    <div class="portfolio-item-content rounded">
+                                                                                                        <img src="assets\img\diss5.JPG" alt="/">
+                                                                                                        <div class="img-overlay text-center">
+                                                                                                            <div class="img-overlay-content">
+                                                                                                                <div class="portfolio-icon">
+                                                                                                                    <button type="button" data-toggle="modal" data-target="#portfolio-single">
+                                                                                                                        <!-- <i class="lni-link"></i> -->
+                                                                                                                    </button>
+                                                                                                                    <!--  <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                                                                                                                                                                                        <i class="lni-search"></i>
+                                                                                                                                                                                                    </a> -->
+                                                                                                                </div>
+                                                                                                                <h5 class="text-white mt-3 mb-0"></h5>
+                                                                                                            </div>
+                                                                                                        </div>
+                                                                                                    </div>
+                                                                                                </div> 
                     </div>
                 </div>
             </div>
