--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                                 <a href="#" data-filter="*" class="active my-1">All</a>
                             </li> 
                             <li class="list-inline-item">
-                               <a href="#" data-filter=".webdesign" class="my-1">Lab</a>
+                               <a href="#" data-filter=".webdesign" class="my-1">Labs</a>
                            </li>
                            <li class="list-inline-item">
                                 <a href="#" data-filter=".conf" class="my-1">Conferences</a>
@@ -567,6 +567,12 @@
                             
                             <li class="list-inline-item">
                                <a href="#" data-filter=".diss" class="my-1">Dissertation</a>
+                           </li>
+                           <li class="list-inline-item">
+                                <a href="#" data-filter=".side" class="my-1">Side Projects</a>
+                           </li> 
+                           <li class="list-inline-item">
+                                <a href="#" data-filter=".coll" class="my-1">Collaborations</a>
                            </li>
                            <!-- <li class="list-inline-item">
                                 <a href="#" data-filter=".pub" class="my-1">Publications</a>
