--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                             </li>
                             <li class="list-inline-item">
                            
-                            <a href="#" data-filter=".field" class="my-1">Cruises/Field Experiments</a>
+                            <a href="#" data-filter=".field" class="my-1">Cruises/Experiments</a>
                             </li>
                             
                             <li class="list-inline-item">
@@ -572,7 +572,7 @@
                                 <a href="#" data-filter=".side" class="my-1">Side Projects</a>
                            </li> 
                            <li class="list-inline-item">
-                                <a href="#" data-filter=".coll" class="my-1">Collaborations</a>
+                                <a href="#" data-filter=".coll" class="my-1">Collabos</a>
                            </li>
                            <!-- <li class="list-inline-item">
                                 <a href="#" data-filter=".pub" class="my-1">Publications</a>
