--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                                 <a href="#" data-filter=".side" class="my-1">Side Projects</a>
                            </li> 
                            <li class="list-inline-item">
-                                <a href="#" data-filter=".coll" class="my-1">Collabos</a>
+                                <a href="#" data-filter=".coll" class="my-1">Collabs</a>
                            </li>
                            <!-- <li class="list-inline-item">
                                 <a href="#" data-filter=".pub" class="my-1">Publications</a>
