--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                          </li>
                                     </ul>
 
-                                    <h3 class="text-dark mb-2"><i class="lni-pencil base-color"></i><span class="base-color">Publications</span></h3>
+                                    <h3 class="text-dark mb-2"><i class="lni-pencil-alt base-color"></i><span class="base-color">Publications</span></h3>
                                      <ul class="timeline">
                                          <li>
                                              <!--<h6 class="base-color mb-0">Meteorology B.S. Penn State</h6>-->
