--- a/nill-dl/index.html
+++ b/nill-dl/index.html
@@ -166,7 +166,7 @@
                                     <div class="hero-content">
                                         <h1 class="text-dark">I'm Samantha</h1>
                                         <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span>,</span></h4>
-                                        <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;">I am a PhD student @ University of Miami studying air sea physics & remote sensing. I have a Bachelor's of Science in Meteorology from Penn State. I am a scientific programmer. </p>
+                                        <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;">I am a Postdoctoral Associate @ University of Miami studying air sea physics & remote sensing. I have a Bachelor's of Science in Meteorology from Penn State. I am a scientific programmer. </p>
                                         <div>
                                             <ul class="list-inline social-icon mt-2">
                                                 <!-- <li class="list-inline-item"><a href="javascript:void(0);"><i class="lni-facebook-filled text-dark"></i></a></li> -->
@@ -263,7 +263,7 @@
                                          </li>
                                          <li>
                                              <h6 class="base-color mb-0">Marine Physics PhD Univeristy of Miami</h6>
-                                             <small class="text-muted ">Current</small>
+                                             <small class="text-muted ">2021</small>
                                              <p class="base-color mb-0">Department of Ocean Sciences, Air Sea Interactions/Remote Sensing Lab. Advisor: Dr. Hans Graber</p>
                                          </li>
                                      </ul>
@@ -271,9 +271,14 @@
                                 <div class="col-lg-6">
                                      <h3 class="text-dark mb-2 mt-5 mt-lg-0"><i class="lni-pencil base-color"></i>Experience</h3>
                                      <ul class="timeline">
+                                        <li>
+                                            <h6 class="base-color mb-0">Postdoctoral Associate </h6>
+                                            <small class="text-muted ">current</small>
+                                            <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
+                                        </li>
                                          <li>
                                              <h6 class="base-color mb-0">Doctoral Research Assistant </h6>
-                                             <small class="text-muted ">Current</small>
+                                             <small class="text-muted ">2015-2021</small>
                                              <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                          </li>
                                          <li>
