--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
                                     <div class="hero-content">
                                         <h1 class="text-dark mb-2"><span class="base-color">I'm Sam</span></h1>
                                         <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span></span></h4>
-                                        <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">I am a PhD student @ University of Miami</span></p>
-                                        <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">studying Air Sea Physics & Remote Sensing </span></p>
-                                        <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">with a B.S. in Meteorology </span></p>
+                                        <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">I am a Postdoc @ University of Miami RSMAS </span></p>
+                                        <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">researching Air Sea Physics & Remote Sensing </span></p>
+                                        <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">with a Ph.D in Marine Physics and B.S. in Atmospheric Science </span></p>
                                         <div>
                                             <ul class="list-inline social-icon mt-2">
                                                 <!-- <li class="list-inline-item"><a href="javascript:void(0);"><i class="lni-facebook-filled text-dark"></i></a></li> -->
@@ -225,7 +225,7 @@
                                          </li>
                                          <li>
                                              <h6 class="base-color mb-0">Marine Physics PhD University of Miami</h6>
-                                             <small class="text-muted ">Current</small>
+                                             <small class="text-muted ">2015-2021</small>
                                              <p class="base-color mb-0">Department of Ocean Sciences</p> 
                                              <p class="base-color mb-0">Air Sea Interaction/Remote Sensing Lab</p>
                                              <!--<p class="base-color mb-0">Advisor: Dr. Hans Graber</p> -->
