--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                                 <div class="col-lg-12">
                                     <div class="hero-content">
                                         <h1 class="text-dark mb-2"><span class="base-color">I'm Sam</span></h1>
-                                        <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span></span></h4>
+                                        <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  <span class="element" data-elements="PhD. Atmospheric Scientist. Ocean Physicist. Data Scientist."></span></span></h4>
                                         <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">I am a Postdoc @ University of Miami RSMAS </span></p>
-                                        <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">researching Air Sea Physics & Remote Sensing </span></p>
-                                        <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">with a Ph.D in Marine Physics and B.S. in Atmospheric Science </span></p>
+                                        <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">researching air sea physics & remote sensing </span></p>
+                                        <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">with a Ph.D in Marine Physics and a B.S. in Atmospheric Science </span></p>
                                         <div>
                                             <ul class="list-inline social-icon mt-2">
                                                 <!-- <li class="list-inline-item"><a href="javascript:void(0);"><i class="lni-facebook-filled text-dark"></i></a></li> -->
