--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                                 <div class="col-lg-12">
                                     <div class="hero-content">
                                         <h1 class="text-dark mb-2"><span class="base-color">I'm Sam</span></h1>
-                                        <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  <span class="element" data-elements="PhD. Atmospheric Scientist. Ocean Physicist. Data Scientist."></span></span></h4>
+                                        <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  <span class="element" data-elements="PhD., Meteorologist., Ocean Physicist., Data Scientist., Remote Sensing Researcher"></span></span></h4>
                                         <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">I am a Postdoc @ University of Miami RSMAS </span></p>
                                         <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">researching air sea physics & remote sensing </span></p>
-                                        <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">with a Ph.D in Marine Physics and a B.S. in Atmospheric Science </span></p>
+                                        <p class="text-dark max-width-450 mx-0 " style = "color:black;"><span class="base-color">with a Ph.D in Marine Physics & a B.S. in Atmospheric Science </span></p>
                                         <div>
                                             <ul class="list-inline social-icon mt-2">
                                                 <!-- <li class="list-inline-item"><a href="javascript:void(0);"><i class="lni-facebook-filled text-dark"></i></a></li> -->
@@ -218,18 +218,25 @@
                                  <div class="col-lg-6">
                                      <h3 class="text-dark mb-2"><i class="lni-graduation base-color"></i><span class="base-color">Education</span></h3>
                                      <ul class="timeline">
-                                         <li>
-                                             <h6 class="base-color mb-0">Meteorology B.S. Penn State</h6>
-                                             <small class="text-muted ">2011-2015</small>
-                                             <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
-                                         </li>
-                                         <li>
+                                        <li>
+                                            <h6 class="base-color mb-0">Marine Physics PhD University of Miami</h6>
+                                            <small class="text-muted ">2015-2021</small>
+                                            <p class="base-color mb-0">Department of Ocean Sciences</p> 
+                                            <p class="base-color mb-0">Air Sea Interaction/Remote Sensing Lab</p>
+                                            <!--<p class="base-color mb-0">Advisor: Dr. Hans Graber</p> -->
+                                        </li><li>
                                              <h6 class="base-color mb-0">Marine Physics PhD University of Miami</h6>
                                              <small class="text-muted ">2015-2021</small>
                                              <p class="base-color mb-0">Department of Ocean Sciences</p> 
                                              <p class="base-color mb-0">Air Sea Interaction/Remote Sensing Lab</p>
                                              <!--<p class="base-color mb-0">Advisor: Dr. Hans Graber</p> -->
                                          </li>
+                                         <li>
+                                             <h6 class="base-color mb-0">Meteorology B.S. Penn State</h6>
+                                             <small class="text-muted ">2011-2015</small>
+                                             <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
+                                         </li>
+                                         
                                     </ul>
 
                                     <h3 class="text-dark mb-2"><i class="lni-pencil-alt base-color"></i><span class="base-color">Publications</span></h3>
